--- a/templates/testcase_manage/index.html
+++ b/templates/testcase_manage/index.html
@@ -27,7 +27,7 @@
         </div>
         <br>
     <div class="form-group row"> 
-        <div class="col-lg-offset-2 col-lg-6">
+        <div class="col-lg-offset-1 col-lg-6">
             <div class="form-group">
                 <label class="control-label col-lg-2" for="modulars" >项目  </label>
                 <div class="col-lg-8"> 
@@ -49,12 +49,13 @@
                             <option>{{ modular.name }}</option>
                         {% endfor %} -->
                     </select>
+                    <button class="btn btn-info" id="submitButton" type="submit" class="btn btn-primary">确定</button>
                 </div>
             </div>
         </div>
-        <div class="col-lg-2 ">
+        <!-- <div class="col-lg-2 ">
             <button class="btn btn-info" id="submitButton" type="submit" class="btn btn-primary">确定</button>
-        </div>
+        </div> -->
     </div> 
     </form>
     <script>
@@ -88,7 +89,7 @@
                 // IE6, IE5 浏览器执行代码
                 xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
             }
-            alert(productName);
+            // alert(productName);
             xmlhttp.open("POST","/testcase/queryModulars/",true);
             xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
             xmlhttp.send("product="+productName);
